tests/error/misc_errors/match_type_mismatch3.err
Error: Invalid entry point (at $FILE:13:0)
   | 
11 | 
12 | @compile_guppy
13 | def main(d: Point[T]) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ...
16 |             pass
   | ^^^^^^^^^^^^^^^^ Function `main` is not a valid compilation entry point since
   |                  the value of its generic parameter `T` is not known

Guppy compilation failed due to 1 previous error
